[package]
name = "yew-ansi"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"
description = "ANSI escape code rendering for the web"
readme = "README.md"
repository = "https://github.com/siku2/yew-ansi"
license = "MIT OR Apache-2.0"
keywords = ["yew", "ansi"]
categories = ["parsing", "web-programming", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["yew"]

[dependencies]
yew = { version = "0.17", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "marking"
harness = false
